--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/passport": "2.0.*",
+        "laravel/tinker": "~1.0",
+        "rackspace/php-opencloud": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
